kustomize/overlays/cloud/deployment_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alphavantage
spec:
  template:
    spec:
      containers:
        - name: alphavantage
          imagePullPolicy: Always
          image: badmullafo/alphavantage:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 10
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 10
