kustomize/overlays/cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alphavantage
  labels:
    app: alphavantage
spec:
  ports:
    - port: 25000
      targetPort: 8000
  selector:
    app: alphavantage
  sessionAffinity: None
  externalTrafficPolicy: Local
  type: LoadBalancer
